fixed covers and scroll-up

--- a/src/css/covers.css
+++ b/src/css/covers.css
@@ -9,8 +9,6 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  max-width: 1440px;
-  margin: 0 auto;
 }
 .marquee {
   position: absolute;
